# computing_power

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HOW_TO_RUN.md  README.md  build.sh  docker-compose-app.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
backend/: .env.example  README.md  WAL_MONITOR_IMPLEMENTATION.md  check_worker_health.py  pyproject.toml  reproduce_issue.py  requirements.txt  verify_regex.py
compute/: ERROR_SANITIZATION.md  __init__.py  main.py  pyproject.toml  requirements.txt  server.py
docker/: nginx.conf
docs/: AUTO_HEALING_SCHEMA.md  SCHEMA_VERSION_FIX.md  duckdb-snowflake.md
migrations/: 001_create_table.sql  003_snowflake_ddl.sql  004_snowflake_ddl.sql  (+2 more)
src/: config.rs  (+6 more)
worker/: .env.example  Dockerfile  HOW_TO_RUN.md  README.md  __init__.py  main.py  pyproject.toml  server.py  start.ps1  start.sh
worker/app/: celery_app.py
worker/app/config/: settings.py
worker/app/core/: __init__.py  concurrency.py  database.py  exceptions.py  logging.py  redis_client.py  security.py
worker/app/services/: __init__.py  health_service.py
worker/app/tasks/: base.py
worker/app/tasks/destination_table_list/: __init__.py  executor.py  task.py
worker/app/tasks/flow_task/: __init__.py  compiler.py  connection_factory.py  destination_writer.py  executor.py  preview_executor.py  task.py
worker/app/tasks/lineage/: __init__.py  parser.py  task.py
worker/app/tasks/linked_task/: __init__.py  executor.py  task.py
worker/app/tasks/preview/: __init__.py  executor.py  profiler.py  serializer.py  task.py  validator.py
(+350 files in other folders)
